k8s/prometheus-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - port: 9090       # porta do Prometheus
      targetPort: 9090 # mesma do container
      nodePort: 30090  # porta exposta no minikube
